Trying to fix overflow hidden and border radius bug on IOS

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,4 +77,8 @@
       linear-gradient(to bottom, grey 1px, transparent 1px);
     mask-image: linear-gradient(to bottom, transparent, black, transparent);
   }
+
+  .ios-overflow-fix {
+    -webkit-mask-image: -webkit-radial-gradient(white, black);
+  }
 }
